--- a/src/probe_basic/probe_basic.yml
+++ b/src/probe_basic/probe_basic.yml
@@ -348,63 +348,91 @@ settings:
     min_value: -10000
     max_value: 10000
 
-  surface-scan.x0:
+  surface-scan.x-start-pos:
     description: X coordinate of initial position for surface scan
     default_value: 0.0
     persistent: true
     min_value: -10000
     max_value: 10000
 
-  surface-scan.y0:
+  surface-scan.x-end-pos:
     description: Y coordinate of initial position for surface scan
     default_value: 0.0
     persistent: true
     min_value: -10000
     max_value: 10000
 
-  surface-scan.xdist:
+  surface-scan.x-point-spacing:
     description: Distance along X axis for surface scan
     default_value: 0.0
     persistent: true
     min_value: -10000
     max_value: 10000
 
-  surface-scan.ydist:
+  surface-scan.y-start-pos:
     description: Distance along Y axis for surface scan
     default_value: 0.0
     persistent: true
     min_value: -10000
     max_value: 10000
 
-  surface-scan.grid-spacing:
+  surface-scan.y-end-pos:
     description: distance between two probed points for surface scan
     default_value: 0.0
     persistent: true
     min_value: -10000
     max_value: 10000
 
-  surface-scan.probe-fast-fr:
+  surface-scan.y-point-spacing:
     description: test
     default_value: 0.0
     persistent: true
     min_value: -10000
     max_value: 10000
 
-  surface-scan.probe-slow-fr:
+  surface-scan.end-pos-roundup:
+    description: test
+    default_value: 0
+    persistent: true
+    min_value: 0
+    max_value: 1
+
+  surface-scan.z-safety-pos:
     description: test
     default_value: 0.0
     persistent: true
     min_value: -10000
     max_value: 10000
 
-  surface-scan.safe-z:
+  surface-scan.z-probe-min-pos:
     description: test
     default_value: 0.0
     persistent: true
     min_value: -10000
     max_value: 10000
 
-  surface-scan.search-depth:
+  surface-scan.probe-z-fast-feedrate:
+    description: test
+    default_value: 0.0
+    persistent: true
+    min_value: -10000
+    max_value: 10000
+
+  surface-scan.probe-z-slow-feedrate:
+    description: test
+    default_value: 0.0
+    persistent: true
+    min_value: -10000
+    max_value: 10000
+
+  surface-scan.probe-xy-traverse-feedrate:
+    description: test
+    default_value: 0.0
+    persistent: true
+    min_value: -10000
+    max_value: 10000
+
+  surface-scan.probe-z-retract-feedrate:
     description: test
     default_value: 0.0
     persistent: true
