--- a/configs/probe_basic/probe_basic.ini
+++ b/configs/probe_basic/probe_basic.ini
@@ -18,16 +18,16 @@ MAX_FEED_OVERRIDE = 2.000000
 MAX_SPINDLE_OVERRIDE = 2.000000
 MIN_SPINDLE_OVERRIDE = 0.500000
 DEFAULT_SPINDLE_SPEED = 300
-DEFAULT_LINEAR_VELOCITY = 10.00000
-MAX_LINEAR_VELOCITY = 10.000000
-MIN_LINEAR_VELOCITY = 0.016670
+DEFAULT_LINEAR_VELOCITY = 100
+MAX_LINEAR_VELOCITY = 200
+MIN_LINEAR_VELOCITY = 10
 DEFAULT_ANGULAR_VELOCITY = 36.000000
 MAX_ANGULAR_VELOCITY = 360.000000
 MIN_ANGULAR_VELOCITY = 1.666667
 PROGRAM_PREFIX = ~/linuxcnc/nc_files
 INTRO_GRAPHIC = linuxcnc.gif
 INTRO_TIME = 1
-INCREMENTS = JOG .01in .001in .0001in
+INCREMENTS = JOG .1mm .01mm .001mm
 GEOMETRY = xyzac
 USER_TABS_PATH = user_tabs/
 
@@ -60,7 +60,7 @@ Z_TOOL_CLEARANCE_HEIGHT = 0.0000
 STEP_TIME = 500
 
 [RS274NGC]
-RS274NGC_STARTUP_CODE = F10 S300 G20 G17 G40 G49 G54 G64 P0.001 G80 G90 G91.1 G92.1 G94 G97 G98
+RS274NGC_STARTUP_CODE = F10 S300 G21 G17 G40 G49 G54 G64 P0.001 G80 G90 G91.1 G92.1 G94 G97 G98
 PARAMETER_FILE = sim.var
 OWORD_NARGS = 1
 NO_DOWNCASE_OWORD = 1
@@ -93,10 +93,10 @@ AXES = 5
 SPINDLES = 1
 COORDINATES = X Y Z A C
 HOME = 0 0 0 0 0
-LINEAR_UNITS = inch
+LINEAR_UNITS = mm
 ANGULAR_UNITS = degree
 DEFAULT_LINEAR_VELOCITY = 0.50
-MAX_LINEAR_VELOCITY = 10.000
+MAX_LINEAR_VELOCITY = 200.000
 
 [EMCIO]
 EMCIO = io
@@ -112,29 +112,29 @@ JOINTS = 5
 #==================
 
 [AXIS_X]
-MIN_LIMIT = -0.001
-MAX_LIMIT = 26.50
-MAX_VELOCITY = 10.0
-MAX_ACCELERATION = 30.0
+MIN_LIMIT = -700
+MAX_LIMIT = 0
+MAX_VELOCITY = 200.0
+MAX_ACCELERATION = 800.0
 
 [JOINT_0]
 TYPE = LINEAR
-HOME = 0.000
-MAX_VELOCITY = 10
-MAX_ACCELERATION = 20.0
+HOME = 0
+MAX_VELOCITY = 200
+MAX_ACCELERATION = 800
 BACKLASH = 0.003
 INPUT_SCALE = 4000
 OUTPUT_SCALE = 1.000
-MIN_LIMIT = -0.001
-MAX_LIMIT = 26.5
+MIN_LIMIT = -700
+MAX_LIMIT = 0
 FERROR = 0.050
 MIN_FERROR = 0.010
 HOME_OFFSET = 0.0
-HOME_SEARCH_VEL = 3.0
-HOME_LATCH_VEL = 0.2
+HOME_SEARCH_VEL = 0
+HOME_LATCH_VEL = 0
 HOME_USE_INDEX = NO
 HOME_IGNORE_LIMITS = NO
-HOME_SEQUENCE = 1
+HOME_SEQUENCE = 0
 HOME_IS_SHARED = 1
 
 #==================
@@ -142,30 +142,30 @@ HOME_IS_SHARED = 1
 #==================
 
 [AXIS_Y]
-MIN_LIMIT = -16.01
-MAX_LIMIT = 0.0000
+MIN_LIMIT = -700
+MAX_LIMIT = 0
 
-MAX_VELOCITY = 10.0
-MAX_ACCELERATION = 20.0
+MAX_VELOCITY = 200
+MAX_ACCELERATION = 800
 
 [JOINT_1]
 TYPE = LINEAR
 HOME = 0.000
-MAX_VELOCITY = 10
-MAX_ACCELERATION = 20.0
+MAX_VELOCITY = 200
+MAX_ACCELERATION = 800
 BACKLASH = 0.003
 INPUT_SCALE = 4000
 OUTPUT_SCALE = 1.000
-MIN_LIMIT = -16.01
-MAX_LIMIT = 0.0000
+MIN_LIMIT = -700
+MAX_LIMIT = 0
 FERROR = 0.050
 MIN_FERROR = 0.010
 HOME_OFFSET = 0.0
-HOME_SEARCH_VEL = 3.0
-HOME_LATCH_VEL = 0.2
+HOME_SEARCH_VEL = 0
+HOME_LATCH_VEL = 0
 HOME_USE_INDEX = NO
 HOME_IGNORE_LIMITS = NO
-HOME_SEQUENCE = 1
+HOME_SEQUENCE = 0
 HOME_IS_SHARED = 1
 
 #==================
@@ -173,27 +173,27 @@ HOME_IS_SHARED = 1
 #==================
 
 [AXIS_Z]
-MIN_LIMIT = -18.0
-MAX_LIMIT = 0.010
-MAX_VELOCITY = 10
-MAX_ACCELERATION = 20.0
+MIN_LIMIT = -180
+MAX_LIMIT = 0
+MAX_VELOCITY = 200
+MAX_ACCELERATION = 800
 OFFSET_AV_RATIO = 0.2
 
 [JOINT_2]
 TYPE = LINEAR
 HOME = 0.000
-MAX_VELOCITY = 10
-MAX_ACCELERATION = 20.0
+MAX_VELOCITY = 200
+MAX_ACCELERATION = 800
 BACKLASH = 0.003
 INPUT_SCALE = 4000
 OUTPUT_SCALE = 1.000
-MIN_LIMIT = -18.00
-MAX_LIMIT = 0.010
+MIN_LIMIT = -180
+MAX_LIMIT = 0
 FERROR = 0.050
 MIN_FERROR = 0.010
 HOME_OFFSET = 1.0
-HOME_SEARCH_VEL = 3.0
-HOME_LATCH_VEL = 0.2
+HOME_SEARCH_VEL = 0
+HOME_LATCH_VEL = 0
 HOME_USE_INDEX = NO
 HOME_IGNORE_LIMITS = NO
 HOME_SEQUENCE = 0
