--- a/src/probe_basic/menubar.yml
+++ b/src/probe_basic/menubar.yml
@@ -110,6 +110,9 @@ menubar:
       - title: Show Machine Ticks
         action: settings.backplot.show-machine-ticks
 
+      - title: Show Surface Map
+        action: settings.backplot.show-points-surface
+
       - separator
 
       - title: Show Program Bounds
