compensation: setting interpolation method with dropdown box via hal pin

--- a/src/probe_basic/probe_basic.yml
+++ b/src/probe_basic/probe_basic.yml
@@ -446,6 +446,13 @@ settings:
     min_value: -10000
     max_value: 10000
 
+  surface-scan.interpolation-method:
+    description: Active subroutine procedure
+    default_value: 0
+    persistent: true
+    min_value: 0
+    max_value: 2
+
 dialogs:
   about_probebasic:
     provider: qtpyvcp.widgets.dialogs.about_dialog:AboutDialog
