--- a/configs/probe_basic/custom_config.yml
+++ b/configs/probe_basic/custom_config.yml
@@ -51,3 +51,6 @@ settings:
 
   backplot.surface-map-transparency:
     default_value: 50
+    persistent: true
+    min_value: 0
+    max_value: 100
