--- a/configs/probe_basic/probe_basic.ini
+++ b/configs/probe_basic/probe_basic.ini
@@ -3,6 +3,9 @@ VERSION = 1.1
 MACHINE = QtPyVCP - probe_basic Sim
 DEBUG = 0
 
+[VTK]
+MACHINE_PARTS = machine.yml
+
 [DISPLAY]
 DISPLAY = probe_basic
 OPEN_FILE = ~/linuxcnc/nc_files/pb_examples/blank.ngc
