--- a/configs/mesa_7i95t_config/7i95t_xyz2.ini
+++ b/configs/mesa_7i95t_config/7i95t_xyz2.ini
@@ -19,7 +19,7 @@ CARD0 = hm2_7i95.0
 [EMC]
 VERSION = 1.1
 MACHINE = Mesa 7i95T XYYZ
-DEBUG = None
+DEBUG = 1
 
 [HM2]
 DRIVER = hm2_eth
@@ -48,6 +48,10 @@ INCREMENTS = JOG 1mm .1mm .01mm .001mm
 # Min/max value that will be allowed for feed override, 1.0 = 100%
 MIN_FEED_OVERRIDE = 0
 MAX_FEED_OVERRIDE = 1.5
+GEOMETRY = xyz
+USER_TABS_PATH = user_tabs/
+LOG_FILE = sim.log
+LOG_LEVEL = DEBUG
 
 [EMCIO]
 EMCIO = iov2
@@ -61,7 +65,7 @@ PROGRAM_PREFIX = ~/linuxcnc/nc_files
 PARAMETER_FILE = linuxcnc.var
 USER_M_PATH = m_codes
 SUBROUTINE_PATH = subroutines
-REMAP=M6 modalgroup=6 prolog=change_prolog ngc=m6remap epilog=change_epilog
+REMAP=M6 modalgroup=6 ngc=m6remap
 
 [PYTHON]
 TOPLEVEL=/home/cnc/linuxcnc/configs/mesa_7i95t_config/python/toplevel.py
@@ -77,9 +81,12 @@ CYCLE_TIME = 0.010
 
 [TRAJ]
 AXES = 3
+SPINDLES = 1
 COORDINATES = XYYZ
+HOME = 0 0 0
 LINEAR_UNITS = mm
 ANGULAR_UNITS = degree
+DEFAULT_LINEAR_VELOCITY = 0.50
 MAX_LINEAR_VELOCITY = 200
 
 [HAL]
