--- a/configs/probe_basic/probe_basic.ini
+++ b/configs/probe_basic/probe_basic.ini
@@ -31,7 +31,7 @@ PROGRAM_PREFIX = ~/linuxcnc/nc_files
 INTRO_GRAPHIC = linuxcnc.gif
 INTRO_TIME = 1
 INCREMENTS = JOG .1mm .01mm .001mm
-GEOMETRY = xyzac
+GEOMETRY = xyz
 USER_TABS_PATH = user_tabs/
 
 # File Paths:
@@ -80,7 +80,7 @@ TASK = milltask
 CYCLE_TIME = 0.010
 
 [HAL]
-HALFILE = hallib/core_sim_5.hal
+HALFILE = hallib/core_sim_3.hal
 HALFILE = hallib/spindle_sim.hal
 HALFILE = hallib/simulated_home_probe_basic.hal
 HALFILE = hallib/sim_cannon.hal
@@ -92,10 +92,10 @@ TWOPASS = on
 [HALUI]
 
 [TRAJ]
-AXES = 5
+AXES = 3
 SPINDLES = 1
-COORDINATES = X Y Z A C
-HOME = 0 0 0 0 0
+COORDINATES = X Y Z
+HOME = 0 0 0
 LINEAR_UNITS = mm
 ANGULAR_UNITS = degree
 DEFAULT_LINEAR_VELOCITY = 0.50
@@ -107,8 +107,8 @@ CYCLE_TIME = 0.100
 TOOL_TABLE = tool.tbl
 
 [KINS]
-KINEMATICS = trivkins coordinates=XYZAC
-JOINTS = 5
+KINEMATICS = trivkins coordinates=XYZ
+JOINTS = 3
 
 #==================
 #      X Axis
