--- a/configs/probe_basic/probe_basic.ini
+++ b/configs/probe_basic/probe_basic.ini
@@ -14,6 +14,7 @@ LOG_FILE = sim.log
 LOG_LEVEL = DEBUG
 PREFERENCE_FILE = sim.pref
 CONFIG_FILE = custom_config.yml
+FULLSCREEN = FALSE
 POSITION = 0x0
 POSITION_OFFSET = RELATIVE
 POSITION_FEEDBACK = ACTUAL
@@ -68,6 +69,7 @@ PARAMETER_FILE = sim.var
 OWORD_NARGS = 1
 NO_DOWNCASE_OWORD = 1
 SUBROUTINE_PATH = subroutines
+REMAP=M6 modalgroup=6 ngc=m6remap
 
 [EMCMOT]
 EMCMOT = motmod
@@ -100,6 +102,10 @@ LINEAR_UNITS = mm
 ANGULAR_UNITS = degree
 DEFAULT_LINEAR_VELOCITY = 0.50
 MAX_LINEAR_VELOCITY = 200.000
+
+[TOOL_CHANGE]
+XPOS = -100
+YPOS = -100
 
 [EMCIO]
 EMCIO = io
