--- a/configs/probe_basic/custom_config.yml
+++ b/configs/probe_basic/custom_config.yml
@@ -1,7 +1,7 @@
 # example of a machine specific settings
 windows:
   mainwindow:
-    provider: custom_probebasic:CustomProbeBasic
+    #provider: custom_probebasic:CustomProbeBasic
     kwargs:
       confirm_exit: false
 
